--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title>
+    <title>Портфолио J</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
 
@@ -15,8 +15,8 @@
     </header>
 
     <section class="hero-image">
-      <div class="container"> <h1 class="heading">Всеволод Боровский</h1>
-      <p>Junior верстальщик</p></div>
+      <div class="container"> <h1 class="heading">Example</h1>
+      <p>Example</p></div>
     </section>
 
     <section class="intro">
@@ -31,10 +31,10 @@
       <div class="container"> <h2 class="subheading">Мои работы</h2>
 
       <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
+      <p>Example text.</p>
 
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p></div>
+      <h3>Example text/h3>
+      <p>Example text</p></div>
     </section>
 
     <footer class="page-footer">
