--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h3>Магазин товаров для дома</h3>
       <p>Example text.</p>
 
-      <h3>Example text/h3>
+      <h3>Example text</h3>
       <p>Example text</p></div>
     </section>
 
